made some changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="card border-0">
           <img src="images/whatwedo2.jpg" class="card-img-top" alt="whatwedo1">
           <div class="card-body">
-            <p class="card-text text-center"> The longer you stay, the <span class="text-primary">cheaper</span> it gets. Wanting
+            <p class="card-text text-center" style="line-height: 1rem;"> The longer you stay, the <span class="text-primary">cheaper</span> it gets. Wanting
               to go see the world for more than 3 days?
               Now you can do so with the discounted rates.
               visit <a href="#" class="text-primary decoration">deals & discounts</a>  for more information. </p>
@@ -63,7 +63,7 @@
         <div class="card border-0">
           <img src="images/whatwedo4.jpg" class="card-img-top" alt="whatwedo1">
           <div class="card-body text-center">
-            <p class="card-text">We know travelling is interesting but what is more 
+            <p class="card-text" style="line-height: 1.2rem;">We know travelling is interesting but what is more 
               fun than travelling with families and loved ones.
               So we offer you daily unbeatable deals.</p>
             <div class="text-center">
